@@ -19,6 +19,8 @@ X_RECORD_INTERFACE = "XRecord"
 X_EVDEV_INTERFACE = "XEvDev"
 ATSPI_INTERFACE = "AT-SPI"
 
+INTERFACES = [X_RECORD_INTERFACE, X_EVDEV_INTERFACE, ATSPI_INTERFACE]
+
 # Key codes enumeration
 class Key:
 
